# ComfyUI-Olm-Resolution-Picker

./: LICENSE.txt  README.md  __init__.py  olm_resolutionpicker.py  pyproject.toml  resolutions.txt
.github/workflows/: publish.yml
js/: jsconfig.json  olm_resolutionpicker.js
